# gvd_server/routers/doc_router.go
@@ -9,4 +9,5 @@ func (router RouterGroup) DocRouter() {
 	app := api.App.DocApi
 	router.POST("docs", middleware.JwtAdmin(), app.DocCreateView)       // 创建文档
 	router.GET("docs/info/:id", middleware.JwtAdmin(), app.DocInfoView) // 文档信息
+	router.GET("docs/:id", app.DocContentView)                          // 文档内容
 }
